--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ button {
 
 
 /* Шапка */
-.page-header {
+.header {
   background-color: var(--white);
   border-bottom: 1px solid #ECECEC;
   padding-top: 24px;
@@ -99,24 +99,24 @@ button {
   height: 80px;
 }
 
-.page-header .container,
-.page-header-nav,
-.header-pages,
+.header-container,
+.header-nav,
+.nav-list,
 .header-contacts {
   display: flex;
   align-items: center;
 }
 
-.hd-page, .hd-contact-item {
+.nav-list__item, .header-contacts__item {
   margin-right: 50px;
 }
 
-.hd-page:last-child,
-.hd-contact-item:last-child { 
+.nav-list__item:last-child,
+.header-contacts__item:last-child { 
   margin-right: 0;
 }
 
-.hd-page a {
+.nav-list__item a {
   padding-top: 32px;
   padding-bottom: 32px;  
 
@@ -130,17 +130,17 @@ button {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hd-page a:hover,
-.hd-page a:focus {
+.nav-list__item a:hover,
+.nav-list__item a:focus {
   color: var(--main-blue);
 }
 
-.hd-page .current {
+.nav-list__item .current {
   position: relative;
   color: var(--main-blue);
 }
 
-.hd-page .current::after {
+.nav-list__item .current::after {
   display: inline-block;
   position: absolute;
   bottom: 0;
