--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ img {
   height: auto;
 } */
 
-.img {
+/* .img {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
@@ -48,14 +48,14 @@ img {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
 /* buttonS */
-button {
+/* button {
   cursor: pointer;
-}
+} */
 
-.btn {
+/* .btn {
   display: flex;
   border-radius: 4px;
   height: 50px;
@@ -80,7 +80,7 @@ button {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-btn ,.modal__btn {
+.hero-btn ,.modal-btn {
   margin-left: auto;
   margin-right: auto;
 }
@@ -89,7 +89,7 @@ button {
 .btn:focus {
   background-color: #188CE8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+} */
 
 
 /* Шапка */
@@ -240,7 +240,7 @@ button {
 } */
 
 /* /Sections&grid */
-.features, .specialty, .our-team, .portfolio, .customers {
+/* .features, .specialty, .our-team, .portfolio, .customers {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -264,10 +264,10 @@ button {
 .grid>li {
   margin-left: 30px;
   margin-top: 30px;
-}
+} */
 
 /* Преимущества*/
-.visually-hidden {
+/* .visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -279,9 +279,9 @@ button {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
+} */
 
-.feature-icon {
+/* .features-list__icon {
   display: flex;
   margin-bottom: 30px;
   width: 270px;
@@ -291,7 +291,7 @@ button {
   justify-content: center;
 }
 
-.features-list h3 {
+.features-list__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -299,17 +299,17 @@ button {
   margin-bottom: 10px;
 }
 
-.features-list>li {
+.features-list__item {
   width: 270px;
   flex-basis: calc(100% / 4 - 30px);
 }
 
-.features p {
+.features-list__text {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   margin: 0;
-}
+} */
 
 /* Чем мы занимаемся */
 .specialty {
