--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,8 @@
 @import 'utils/variables';
+@import 'utils/base';
 @import 'components/header';
 @import 'components/logo';
 @import 'components/hero';
+@import 'components/buttons';
+@import 'components/_sections&grids';
+@import 'components/features';
