--- a/sass/components/_sections&grids.scss
+++ b/sass/components/_sections&grids.scss
@@ -3,7 +3,7 @@
   padding-bottom: 94px;
 }
 
-.specialty__title,.team-title,.customers-title {
+.specialty__title,.team__title,.customers__title {
   margin-bottom: 50px;
   
   font-weight: 700;
