--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,5 +4,8 @@
 @import 'components/logo';
 @import 'components/hero';
 @import 'components/buttons';
-@import 'components/_sections&grids';
+@import 'components/sections&grids';
 @import 'components/features';
+@import 'components/speciality';
+@import 'components/social-links';
+@import 'components/team';
