--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ button {
   cursor: pointer;
 }
 
-.img {
+.thumb__img {
   max-width: 100%;
   max-height: 100%;
   -o-object-fit: cover;
@@ -257,7 +257,7 @@ button {
   padding-bottom: 94px;
 }
 
-.specialty-title, .team-title, .customers-title {
+.specialty__title, .team__title, .customers__title {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -315,5 +315,116 @@ button {
   font-size: 14px;
   line-height: 1.71;
   margin: 0;
+}
+
+.specialty {
+  padding-top: 0;
+}
+
+.specialty-list__item {
+  -ms-flex-preferred-size: calc(100% / 3 - 30px);
+      flex-basis: calc(100% / 3 - 30px);
+}
+
+.specialty-thumb {
+  position: relative;
+  height: 294px;
+}
+
+.specialty-list__title {
+  position: absolute;
+  bottom: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  text-align: center;
+  height: 70px;
+  width: 370px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--white);
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.social-networks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 206px;
+  height: 44px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.social-networks__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 44px;
+  width: 44px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-networks__link:hover, .social-networks__link:focus {
+  color: var(--white);
+  background-color: var(--main-blue);
+  outline: none;
+}
+
+.social-networks__team-link {
+  color: #AFB1B8;
+  border-radius: 50%;
+}
+
+.social-networks__join-link {
+  color: var(--white);
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+
+.social-networks__icon {
+  fill: currentColor;
+}
+
+.team {
+  background-color: var(--light-back);
+}
+
+.team-list__item {
+  -ms-flex-preferred-size: calc(100% / 4 - 30px);
+      flex-basis: calc(100% / 4 - 30px);
+  background-color: var(--white);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-list__content {
+  text-align: center;
+  padding: 30px 32px;
+}
+
+.team-list__title {
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+}
+
+.team-list__text {
+  margin: 0;
+  margin-bottom: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
 }
 /*# sourceMappingURL=main.css.map */
