--- a/css/style.css
+++ b/css/style.css
@@ -312,11 +312,11 @@ img {
 } */
 
 /* Чем мы занимаемся */
-.specialty {
+/* .specialty {
   padding-top: 0;
 }
 
-.specialty-list>li {
+.specialty-list__item {
   flex-basis: calc(100% / 3 - 30px);
 }
 
@@ -326,7 +326,7 @@ img {
   height: 294px;
 }
 
-.specialty-list h3 {
+specialty-list__title {
   position: absolute;
   bottom: 0;
   padding-top: 27px;
@@ -342,18 +342,18 @@ img {
   color: var(--white);
  
   background: rgba(47, 48, 58, 0.8);
-}
+} */
 
 /* Ccылки на социальные сети */
 
-.social-links {
+/* .social-networks {
   display: flex;
   width: 206px;
   height: 44px;
   justify-content: space-between;
 }
 
-.social-links a {
+.social-networks__link {
   display: flex;
   height: 44px;
   width: 44px;
@@ -366,34 +366,34 @@ img {
     outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team.social-links a {
+.social-networks__team-link {
   color: #AFB1B8;
   border-radius: 50%;
 }
 
-.join.social-links a {
+.social-networks__join-link {
   color: var(--white);
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
 }
 
-.social-links a:hover, 
-.social-links a:focus {
+.social-networks__link:hover, 
+.social-networks__link:focus {
   color: var(--white);
   background-color: var(--main-blue);
   outline: none;
 }
 
-.link-icon {
+.social-networks__icon {
   fill: currentColor;
-}
+} */
  
 /* Наша команда */
-.our-team {
+/* .team {
   background-color: var(--light-back);
 }
 
-.team-list>li {
+.team-list__item {
   flex-basis: calc(100% / 4 - 30px);
 
   background-color: var(--white);
@@ -403,12 +403,12 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list-content {
+.team-list__content {
   text-align: center;
   padding: 30px 32px;
 }
 
-.team-list h3 {
+.team-list__title {
   margin-bottom: 10px;
 
   font-weight: 500;
@@ -416,14 +416,13 @@ img {
   line-height: 1.18;
 }
 
-.team-list p {
+.team-list__text {
   margin: 0;
   margin-bottom: 16px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
-
-}
+} */
 
 /* Постоянные клиенты */
 .customers-list>li{
