--- a/css/style.css
+++ b/css/style.css
@@ -425,11 +425,11 @@ specialty-list__title {
 } */
 
 /* Постоянные клиенты */
-.customers-list>li{
+/* .customers-list__item {
   flex-basis: calc(100% / 6 - 30px);
 }
 
-.customers-list a {
+.customers-list__link {
   display: flex;
   width: 170px;
   height: 90px;
@@ -441,20 +441,20 @@ specialty-list__title {
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover, 
+  &:focus {
+    color: var(--main-blue);
+    outline: none;
+  }
 }
 
-.customers-list a:hover, 
-.customers-list a:focus {
-  color: var(--main-blue);
-  outline: none;
-}
-
-.logo-icon { 
+.customers-list__icon { 
   fill: currentColor;
-}
+} */
 
 /* Подвал */
-.footer {
+/* .footer {
   background-color: var(--dark-back);
   padding-top: 60px;
   padding-bottom: 60px;
@@ -462,13 +462,13 @@ specialty-list__title {
 
 /* Адресс, контакты */
 
-.footer .container {
+/* .footer-container {
   display: flex;
   justify-content: start;
   align-items: baseline;
 }
 
-.footer-address,
+.footer__location,
 .footer-contacts {
   font-style: normal;
   font-size: 14px;
@@ -477,34 +477,35 @@ specialty-list__title {
   flex-direction: column;
 }
 
-.footer-address {
+.footer__location {
   margin: 0;
   margin-top: 20px;
       
   color: var(--white);
 }
 
-.footer-contacts a{
+.footer-contacts__link {
   display: inline-block;
   margin-top: 9px;
 
   color: var(--text-white6);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer-contacts a:hover,
-.footer-contacts a:focus {
-  color: var(--main-blue);
-}
+  &:hover,
+  &:focus {
+    color: var(--main-blue);
+  }
+
+} */
 
 /* Присоеденяйтесь */
 
-.join-us {
+/* .join {
   margin-left: 70px;
 } 
 
-.join-title, .sign-title {
+.join__title, .sign__title {
   margin-top: 0;
   margin-bottom: 20px;
   
@@ -514,19 +515,19 @@ specialty-list__title {
   text-transform: uppercase;
   
   color: var(--white);
-}
+} */
 
 /* Подписывайтесь на рассылку */
-
+/* 
 .sign {
   margin-left: 93px;
 }
 
-.sign form {
+.sign-form {
   display: flex;
 }
 
-.sign input {
+.sign-form__input {
   margin-right: 12px;
   padding: 15px 16px;
 
@@ -540,20 +541,21 @@ specialty-list__title {
  
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  &::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+  }
+
 }
 
-.sign input::placeholder {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.sign-icon { 
+.sign-btn__icon { 
   margin-left: 10px;
   fill: var(--white);
-}
+} */ 
 
 /* Портфолио */
 
@@ -742,7 +744,7 @@ specialty-list__title {
   flex-direction: column;
 }
 
-.modal-title {
+.modal__title {
   margin: 0;
   margin-bottom: 12px;
   
@@ -752,7 +754,7 @@ specialty-list__title {
   text-align: center;
 }  
 
-.modal-close-btn {
+.modal__close-btn {
   position: absolute;
   left: calc(100% - 38px);
   top: 8px;
@@ -764,17 +766,15 @@ specialty-list__title {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--white);
   
+  &:hover .close-icon,
+  &:focus .close-icon {
+    fill: var(--main-blue);
+  }
 }
 
-.close-icon {
+.modal__close-icon{
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-close-btn:hover .close-icon,
-.modal-close-btn:focus .close-icon {
-  fill: var(--main-blue);
-}
-
 
 .modal label { 
   margin-bottom: 4px;
