--- a/sass/components/_sections&grids.scss
+++ b/sass/components/_sections&grids.scss
@@ -1,4 +1,4 @@
-.features, .specialty, .our-team, .portfolio, .customers {
+.features, .specialty, .team, .portfolio, .customers {
   padding-top: 94px;
   padding-bottom: 94px;
 }
