--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,6 @@
 @import 'components/speciality';
 @import 'components/social-links';
 @import 'components/team';
+@import 'components/customers';
+@import 'components/footer';
+@import 'components/modal';
