--- a/css/style.css
+++ b/css/style.css
@@ -559,13 +559,22 @@ specialty-list__title {
 
 /* Портфолио */
 
-.portfolio-filter {
+/* Фильтр кнопок */
+/* .portfolio-filter {
   display: flex;
   margin-bottom: 34px;
   justify-content: center;
 }
 
-.portfolio-filter button {
+.portfolio-filter__item {
+  margin-right: 8px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.portfolio-filter__btn {
   padding: 6px 22px;
   
   color: var(--title-grey);
@@ -584,33 +593,28 @@ specialty-list__title {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.portfolio-filt-btn {
-  margin-right: 8px;
-}
 
-.portfolio-filt-btn:last-child {
-  margin-right: 0;
-}
+  &:hover,
+  &:focus {
+    background-color: var(--main-blue);
+    color: var(--white);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
+      0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 
-.portfolio-filter button:hover,
-.portfolio-filter button:focus {
-  background-color: var(--main-blue);
-  color: var(--white);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
-    0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+} */
 
-}
-
-.portfolio-list>li {
+/* Список-портфолио */
+/* 
+.portfolio-list__item {
   flex-basis: calc(100% / 3 - 30px);
 
   background-color: var(--white);
 }
 
-.portfolio-list a {
+.portfolio-list__link {
   display: block;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -623,15 +627,22 @@ specialty-list__title {
       1px 4px 6px rgba(0, 0, 0, 0.16);
     outline: none;
   }
+
+  &:hover .portfolio-thumb::before,
+  &:hover .portfolio-thumb__text {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
 }
 
-.portfolio-list-content {
+.portfolio-content {
   padding: 20px 24px;
   border: 1px solid #EEEEEE;
   border-top: 0;
 }
 
-.portfolio-list h2 {
+.portfolio-content__title {
   margin-bottom: 4px;
 
   font-weight: 700;
@@ -640,7 +651,7 @@ specialty-list__title {
   letter-spacing: 0.06em;
 }
 
-.portfolio-list-content  p {
+.portfolio-content__text {
   margin: 0;
 
   font-weight: 400;
@@ -653,20 +664,29 @@ specialty-list__title {
   position: relative;
   overflow: hidden;
   height: 294px;
+
+  &::before {
+    display: inline-block;
+    content: "";
+    position: absolute;
+    opacity: 0;
+  
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
-.portfolio-thumb::before {
-  display: inline-block;
-  content: "";
-  position: absolute;
-  opacity: 0;
-
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
+.portfolio-thumb__img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
 
-.portfolio-hover-text {
+.portfolio-thumb__text {
   position: absolute;
   top: 0;
   opacity: 0;
@@ -678,21 +698,11 @@ specialty-list__title {
   line-height: 1.56;
 
   color: var(--white);
-}
 
-.portfolio-thumb::before,
-.portfolio-hover-text {
-  
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.portfolio-link:hover .portfolio-thumb::before,
-.portfolio-link:hover .portfolio-hover-text {
-  opacity: 1;
-  transform: translateY(0);
-}
- 
 /* Заказать услугу, модальное окно
 
 .backdrop {
