--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -17,8 +17,10 @@
   justify-content: center;
   letter-spacing: 0.06em;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include main-transition (background-color box-shadow);
+  // @include main-transition (background-color);
+  // transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  //   box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
