--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -12,7 +12,8 @@
 
   opacity: 1;
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include main-transition (opacity);
+ 
 }
 
 .backdrop.is-hidden {
@@ -39,9 +40,10 @@
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-
+  
   transform: translate(-50%, -50%) scale(1) rotate(360deg);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include main-transition (transform);
+
 }
 
 .modal-form {
@@ -78,7 +80,7 @@
 }
 
 .btn-close__icon {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include main-transition (fill);
 }
 
 .modal-form__label { 
@@ -103,7 +105,8 @@
   fill: var(--title-grey);
 
   transform: translate(12px,11px);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @include main-transition (fill);
 }
 
 .modal-form__input {
@@ -115,8 +118,8 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
  
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  @include main-transition (border);
+  
   &:focus {
     border: 1px solid var(--main-blue);
     outline: none;
@@ -137,7 +140,7 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
  
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include main-transition (border);
 
   &::placeholder {
     font-size: 14px;
@@ -178,7 +181,9 @@
 
 .modal-form__check-icon use {
   opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+  @include main-transition (opacity);
+
 }
 
 .modal-form__agree-check:checked {
