--- a/sass/components/_speciality.scss
+++ b/sass/components/_speciality.scss
@@ -12,6 +12,12 @@
   height: 294px;
 }
 
+.specialty-thumb__img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
 .specialty-list__title {
   position: absolute;
   bottom: 0;
@@ -29,3 +35,4 @@
  
   background: rgba(47, 48, 58, 0.8);
 }
+
