--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,16 +1,16 @@
 @import 'utils/variables';
 @import 'utils/base';
 @import 'utils/mixins';
+@import 'components/sections&grids';
+@import 'components/buttons';
 @import 'components/header';
 @import 'components/logo';
-@import 'components/hero';
-@import 'components/buttons';
-@import 'components/sections&grids';
-@import 'components/features';
-@import 'components/speciality';
+@import 'components/index/hero';
+@import 'components/index/features';
+@import 'components/index/speciality';
 @import 'components/social-links';
-@import 'components/team';
-@import 'components/customers';
+@import 'components/index/team';
+@import 'components/index/customers';
 @import 'components/footer';
-@import 'components/modal';
-@import 'components/portfolio'
+@import 'components/index/modal';
+@import 'components/portfolio/portfolio'
