--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,74 @@ button, label {
   overflow: hidden;
 }
 
+.features, .specialty, .team, .portfolio, .customers {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.specialty__title, .team__title, .customers__title {
+  margin-bottom: 50px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  color: var(--title-grey);
+  letter-spacing: inherit;
+}
+
+.grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.grid > li {
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 4px;
+  height: 50px;
+  min-width: 200px;
+  padding: 10px;
+  background-color: var(--main-blue);
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  color: var(--white);
+  letter-spacing: 0.06em;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn:hover, .btn:focus {
+  background-color: #188CE8;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.hero-btn, .modal-btn {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .header {
   background-color: var(--white);
   border-bottom: 1px solid #ECECEC;
@@ -161,11 +229,12 @@ button, label {
 
 .logo {
   display: inline-block;
-  color: var(--main-blue);
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+  color: var(--main-blue);
+  letter-spacing: inherit;
 }
 
 .logo-header {
@@ -200,78 +269,12 @@ button, label {
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
-  color: var(--white);
   text-transform: uppercase;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  letter-spacing: 0.06em;
-}
-
-.btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 4px;
-  height: 50px;
-  min-width: 200px;
-  padding: 10px;
-  background-color: var(--main-blue);
-  border: none;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
   color: var(--white);
   letter-spacing: 0.06em;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn:hover, .btn:focus {
-  background-color: #188CE8;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-
-.hero-btn, .modal-btn {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.features, .specialty, .team, .portfolio, .customers {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.specialty__title, .team__title, .customers__title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-}
-
-.grid {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
-}
-
-.grid > li {
-  margin-left: 30px;
-  margin-top: 30px;
 }
 
 .features-list__icon {
@@ -294,7 +297,8 @@ button, label {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  color: inherit;
+  color: var(--title-grey);
+  letter-spacing: inherit;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
@@ -310,6 +314,7 @@ button, label {
   font-size: 14px;
   line-height: 1.71;
   color: inherit;
+  letter-spacing: inherit;
   margin: 0;
 }
 
@@ -345,8 +350,9 @@ button, label {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  text-transform: uppercase;
   color: var(--white);
+  letter-spacing: inherit;
+  text-transform: uppercase;
   background: rgba(47, 48, 58, 0.8);
 }
 
@@ -421,6 +427,8 @@ button, label {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
+  color: var(--title-grey);
+  letter-spacing: inherit;
 }
 
 .team-list__text {
@@ -429,6 +437,8 @@ button, label {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
+  color: inherit;
+  letter-spacing: inherit;
 }
 
 .customers-list__item {
@@ -490,6 +500,7 @@ button, label {
   font-size: 14px;
   line-height: 1.71;
   color: inherit;
+  letter-spacing: inherit;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -529,6 +540,7 @@ button, label {
   font-size: 14px;
   line-height: 1.14;
   color: var(--white);
+  letter-spacing: inherit;
   text-transform: uppercase;
 }
 
@@ -650,10 +662,12 @@ button, label {
 .modal-form__title {
   margin: 0;
   margin-bottom: 12px;
+  text-align: center;
   font-weight: 700;
   font-size: 20px;
+  line-height: inherit;
   color: var(--title-grey);
-  text-align: center;
+  letter-spacing: inherit;
 }
 
 .btn-close {
@@ -681,7 +695,8 @@ button, label {
   margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.167;
+  line-height: 1.17;
+  color: inherit;
   letter-spacing: 0.01em;
 }
 
@@ -732,27 +747,35 @@ button, label {
 }
 
 .modal-form__textarea::-webkit-input-placeholder {
+  font-weight: inherit;
   font-size: 14px;
-  letter-spacing: 0.01em;
+  line-height: inherit;
   color: rgba(117, 117, 117, 0.5);
+  letter-spacing: 0.01em;
 }
 
 .modal-form__textarea:-ms-input-placeholder {
+  font-weight: inherit;
   font-size: 14px;
-  letter-spacing: 0.01em;
+  line-height: inherit;
   color: rgba(117, 117, 117, 0.5);
+  letter-spacing: 0.01em;
 }
 
 .modal-form__textarea::-ms-input-placeholder {
+  font-weight: inherit;
   font-size: 14px;
-  letter-spacing: 0.01em;
+  line-height: inherit;
   color: rgba(117, 117, 117, 0.5);
+  letter-spacing: 0.01em;
 }
 
 .modal-form__textarea::placeholder {
+  font-weight: inherit;
   font-size: 14px;
-  letter-spacing: 0.01em;
+  line-height: inherit;
   color: rgba(117, 117, 117, 0.5);
+  letter-spacing: 0.01em;
 }
 
 .modal-form__textarea:focus {
@@ -766,12 +789,14 @@ button, label {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 30px;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  font-weight: inherit;
+  font-size: 14px;
+  line-height: 1.71;
+  color: inherit;
+  letter-spacing: 0.03em;
 }
 
 .modal-form__agree-link {
@@ -825,13 +850,13 @@ button, label {
 
 .portfolio-filter__btn {
   padding: 6px 22px;
-  color: var(--title-grey);
   background-color: var(--light-back);
   border: none;
   border-radius: 4px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  color: var(--title-grey);
   letter-spacing: 0.03em;
   text-align: center;
   outline: none;
@@ -887,6 +912,7 @@ button, label {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
+  color: var(--title-grey);
   letter-spacing: 0.06em;
 }
 
@@ -896,6 +922,7 @@ button, label {
   font-size: 16px;
   line-height: 1.87;
   color: var(--text-grey);
+  letter-spacing: inherit;
 }
 
 .portfolio-thumb {
@@ -908,12 +935,11 @@ button, label {
   display: inline-block;
   content: "";
   position: absolute;
-  opacity: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  -webkit-transform: translateY(101%);
+          transform: translateY(101%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -933,9 +959,11 @@ button, label {
   opacity: 0;
   margin: 0;
   padding: 63px 24px;
+  font-weight: inherit;
   font-size: 18px;
   line-height: 1.56;
   color: var(--white);
+  letter-spacing: inherit;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
