--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -36,10 +36,8 @@
   padding-top: 32px;
   padding-bottom: 32px;  
 
-  @include font(500, 14px, 1.14, var(--title-grey));
+  @include font(500, 14px, 1.14, var(--title-grey),  0.02em);
   
-  letter-spacing: 0.02em;
-
   @include main-transition(color);
   
   &:hover,
@@ -75,9 +73,7 @@
 .header-contacts__link {
   display: flex;
    
-  @include font(500, 14px, 1.14, var(--text-grey));
-  
-  letter-spacing: 0.02em;
+  @include font(500, 14px, 1.14, var(--text-grey), 0.02em);
 
   &:hover,
   &:focus {
