--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,12 +1,9 @@
 .logo {
   display: inline-block;
-  color: var(--main-blue);
-
+  
   font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-
+  @include font(700, 26px, 1.19,  var(--main-blue), inherit);
+ 
   &-header{ 
     margin-right: 93px;
   }
