--- a/sass/components/_sections&grids.scss
+++ b/sass/components/_sections&grids.scss
@@ -5,11 +5,9 @@
 
 .specialty__title,.team__title,.customers__title {
   margin-bottom: 50px;
-  
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
   text-align: center;
+  
+  @include font(700, 36px, 1.16, var(--title-grey), inherit);
 }
 
 .grid {
