--- a/sass/components/index/_modal.scss
+++ b/sass/components/index/_modal.scss
@@ -14,16 +14,15 @@
 
   @include main-transition (opacity);
  
-}
+  &.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: visible;
+  }
 
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: visible;
-}
-
-.backdrop.is-hidden .modal { 
-  transform: translate(-50%, -50%) scale(0.1); 
+  &.is-hidden .modal { 
+    transform: translate(-50%, -50%) scale(0.1); 
+  }
 }
 
 .modal {
@@ -43,7 +42,6 @@
   
   transform: translate(-50%, -50%) scale(1) rotate(360deg);
   @include main-transition (transform);
-
 }
 
 .modal-form {
@@ -54,11 +52,9 @@
 .modal-form__title {
   margin: 0;
   margin-bottom: 12px;
-  
-  font-weight: 700;
-  font-size: 20px;
-  color: var(--title-grey);
   text-align: center;
+  
+  @include font(700, 20px, inherit,  var(--title-grey), inherit);
 }  
 
 .btn-close {
@@ -86,11 +82,7 @@
 .modal-form__label { 
   margin-bottom: 4px;
 
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.167;
-   
-  letter-spacing: 0.01em;
+  @include font(400, 12px, 1.17, inherit,  0.01em);
 } 
 
 .input-wrapper {
@@ -106,7 +98,7 @@
 
   transform: translate(12px,11px);
 
-  @include main-transition (fill);
+  @include main-transition(fill);
 }
 
 .modal-form__input {
@@ -143,9 +135,7 @@
   @include main-transition (border);
 
   &::placeholder {
-    font-size: 14px;
-    letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
+    @include font(inherit, 14px, inherit,  rgba(117, 117, 117, 0.5),  0.01em);
   }
 
   &:focus{
@@ -159,11 +149,9 @@
 .modal-form__agree-label {
   display: flex;
   margin-bottom: 30px;
-  
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
   justify-content: center;
+  
+  @include font(inherit, 14px, 1.71, inherit, 0.03em);
 }
 
 .modal-form__agree-link {
