--- a/sass/components/index/_speciality.scss
+++ b/sass/components/index/_speciality.scss
@@ -27,12 +27,9 @@
   height: 70px;
   width: 370px;
 
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(700, 14px, 1.14, var(--white), inherit);
   text-transform: uppercase;
-  color: var(--white);
- 
+  
   background: rgba(47, 48, 58, 0.8);
 }
 
