--- a/sass/components/index/_team.scss
+++ b/sass/components/index/_team.scss
@@ -20,16 +20,12 @@
 .team-list__title {
   margin-bottom: 10px;
 
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
+  @include font(500, 16px, 1.18, var(--title-grey), inherit);
 }
 
 .team-list__text {
   margin: 0;
   margin-bottom: 16px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.18;
 
+  @include font(400, 16px, 1.18, inherit, inherit);
 }
