--- a/sass/components/portfolio/_portfolio.scss
+++ b/sass/components/portfolio/_portfolio.scss
@@ -18,15 +18,11 @@
 .portfolio-filter__btn {
   padding: 6px 22px;
   
-  color: var(--title-grey);
   background-color: var(--light-back);
   border: none;
   border-radius: 4px;
  
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
+  @include font(500, 16px, 1.62, var(--title-grey), 0.03em);
   text-align: center;
 
   outline: none;
@@ -70,7 +66,6 @@
     opacity: 1;
     transform: translateY(0);
   }
-  
 }
 
 .portfolio-content {
@@ -82,19 +77,13 @@
 .portfolio-content__title {
   margin-bottom: 4px;
 
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
+  @include font(700, 18px, 2, var(--title-grey), 0.06em);
 }
 
 .portfolio-content__text {
   margin: 0;
 
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.87;
-  color: var(--text-grey);
+  @include font(400, 16px, 1.87,  var(--text-grey), inherit);
 }
 
 .portfolio-thumb {
@@ -106,13 +95,12 @@
     display: inline-block;
     content: "";
     position: absolute;
-    opacity: 0;
-  
+      
     width: 100%;
     height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
     
-    transform: translateY(100%);
+    transform: translateY(101%);
     @include main-transition(transform);
   }
 }
@@ -131,12 +119,8 @@
   margin: 0;
   padding: 63px 24px;
 
-  font-size: 18px;
-  line-height: 1.56;
-
-  color: var(--white);
-
+  @include font(inherit, 18px, 1.56,  var(--white), inherit);
+  
   transform: translateY(100%);
   @include main-transition(transform);
-  
 }
