--- a/css/main.css
+++ b/css/main.css
@@ -357,7 +357,7 @@ button, label {
   margin-top: -30px;
 }
 
-.grid > li {
+.grid__item {
   margin-left: 30px;
   margin-top: 30px;
 }
@@ -420,23 +420,23 @@ button, label {
           align-items: center;
 }
 
-.nav-list__item {
+.nav__item {
   margin-right: 50px;
 }
 
-.nav-list__item:last-child {
+.nav__item:last-child {
   margin-right: 0;
 }
 
-.header-contacts__item {
+.contacts__item {
   margin-right: 50px;
 }
 
-.header-contacts__item:last-child {
+.contacts__item:last-child {
   margin-right: 0;
 }
 
-.nav-list__link {
+.nav__link {
   padding-top: 32px;
   padding-bottom: 32px;
   font-weight: 500;
@@ -448,16 +448,16 @@ button, label {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-list__link:hover, .nav-list__link:focus {
+.nav__link:hover, .nav__link:focus {
   color: var(--main-blue);
 }
 
-.nav-list__link--current {
+.nav__link--current {
   position: relative;
   color: var(--main-blue);
 }
 
-.nav-list__link--current::after {
+.nav__link--current::after {
   display: inline-block;
   position: absolute;
   bottom: 0;
@@ -473,7 +473,7 @@ button, label {
   margin-left: auto;
 }
 
-.header-contacts__link {
+.contacts__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -484,11 +484,11 @@ button, label {
   letter-spacing: 0.02em;
 }
 
-.header-contacts__link:hover, .header-contacts__link:focus {
+.contacts__link:hover, .contacts__link:focus {
   color: var(--main-blue);
 }
 
-.header-contacts__icon {
+.contacts__icon {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -546,7 +546,7 @@ button, label {
   letter-spacing: 0.06em;
 }
 
-.features-list__icon {
+.features__icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -572,13 +572,13 @@ button, label {
   margin-bottom: 10px;
 }
 
-.features-list__item {
+.features__item {
   width: 270px;
   -ms-flex-preferred-size: calc(100% / 4 - 30px);
       flex-basis: calc(100% / 4 - 30px);
 }
 
-.features-list__text {
+.features__text {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -591,7 +591,7 @@ button, label {
   padding-top: 0;
 }
 
-.specialty-list__item {
+.specialty__item {
   -ms-flex-preferred-size: calc(100% / 3 - 30px);
       flex-basis: calc(100% / 3 - 30px);
 }
@@ -601,7 +601,7 @@ button, label {
   height: 294px;
 }
 
-.specialty-thumb__img {
+.specialty__img {
   max-width: 100%;
   max-height: 100%;
   -o-object-fit: cover;
@@ -636,7 +636,7 @@ button, label {
           justify-content: space-between;
 }
 
-.social-networks__link {
+.social__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -652,24 +652,24 @@ button, label {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-networks__link:hover, .social-networks__link:focus {
+.social__link:hover, .social__link:focus {
   color: var(--white);
   background-color: var(--main-blue);
   outline: none;
 }
 
-.social-networks__team-link {
+.social__team-link {
   color: #AFB1B8;
   border-radius: 50%;
 }
 
-.social-networks__join-link {
+.social__join-link {
   color: var(--white);
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
 }
 
-.social-networks__icon {
+.social__icon {
   fill: currentColor;
 }
 
@@ -677,7 +677,7 @@ button, label {
   background-color: var(--light-back);
 }
 
-.team-list__item {
+.team__item {
   -ms-flex-preferred-size: calc(100% / 4 - 30px);
       flex-basis: calc(100% / 4 - 30px);
   background-color: var(--white);
@@ -686,7 +686,7 @@ button, label {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list__content {
+.team__content {
   text-align: center;
   padding: 30px 32px;
 }
@@ -700,7 +700,7 @@ button, label {
   letter-spacing: inherit;
 }
 
-.team-list__text {
+.team__text {
   margin: 0;
   margin-bottom: 16px;
   font-weight: 400;
@@ -710,12 +710,12 @@ button, label {
   letter-spacing: inherit;
 }
 
-.customers-list__item {
+.customers__item {
   -ms-flex-preferred-size: calc(100% / 6 - 30px);
       flex-basis: calc(100% / 6 - 30px);
 }
 
-.customers-list__link {
+.customers__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -734,12 +734,12 @@ button, label {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customers-list__link:hover, .customers-list__link:focus {
+.customers__link:hover, .customers__link:focus {
   color: var(--main-blue);
   outline: none;
 }
 
-.customers-list__icon {
+.customers__icon {
   fill: currentColor;
 }
 
@@ -762,8 +762,7 @@ button, label {
           align-items: baseline;
 }
 
-.footer__location,
-.footer-contacts {
+.footer-address {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -779,13 +778,13 @@ button, label {
           flex-direction: column;
 }
 
-.footer__location {
+.address__location {
   margin: 0;
   margin-top: 20px;
   color: var(--white);
 }
 
-.footer-contacts__link {
+.address__link {
   display: inline-block;
   margin-top: 9px;
   color: var(--text-white6);
@@ -793,13 +792,13 @@ button, label {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-contacts__link:hover, .footer-contacts__link:focus {
+.address__link:hover, .address__link:focus {
   color: var(--main-blue);
 }
 
 /* Присоеденяйтесь */
 .join {
-  margin-left: 70px;
+  margin-left: auto;
 }
 
 .join__title, .sign__title {
@@ -822,9 +821,12 @@ button, label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
 }
 
-.sign-form__input {
+.sign__input {
   margin-right: 12px;
   padding: 15px 16px;
   height: 50px;
@@ -838,7 +840,7 @@ button, label {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.sign-form__input::-webkit-input-placeholder {
+.sign__input::-webkit-input-placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -846,7 +848,7 @@ button, label {
   letter-spacing: 0.03em;
 }
 
-.sign-form__input:-ms-input-placeholder {
+.sign__input:-ms-input-placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -854,7 +856,7 @@ button, label {
   letter-spacing: 0.03em;
 }
 
-.sign-form__input::-ms-input-placeholder {
+.sign__input::-ms-input-placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -862,7 +864,7 @@ button, label {
   letter-spacing: 0.03em;
 }
 
-.sign-form__input::placeholder {
+.sign__input::placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -870,7 +872,7 @@ button, label {
   letter-spacing: 0.03em;
 }
 
-.sign-btn__icon {
+.sign__icon {
   margin-left: 10px;
   fill: var(--white);
 }
@@ -928,7 +930,7 @@ button, label {
           flex-direction: column;
 }
 
-.modal-form__title {
+.modal__title {
   margin: 0;
   margin-bottom: 12px;
   text-align: center;
@@ -950,17 +952,17 @@ button, label {
   background-color: var(--white);
 }
 
-.btn-close:hover .btn-close__icon,
-.btn-close:focus .btn-close__icon {
+.btn-close:hover .close__icon,
+.btn-close:focus .close__icon {
   fill: var(--main-blue);
 }
 
-.btn-close__icon {
+.close__icon {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form__label {
+.modal__label {
   margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
@@ -974,7 +976,7 @@ button, label {
   margin-bottom: 10px;
 }
 
-.modal-form__icon {
+.modal__icon {
   position: absolute;
   left: 0;
   top: 0;
@@ -985,7 +987,7 @@ button, label {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form__input {
+.modal__input {
   padding: 11px;
   padding-left: 40px;
   width: 100%;
@@ -995,16 +997,16 @@ button, label {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form__input:focus {
+.modal__input:focus {
   border: 1px solid var(--main-blue);
   outline: none;
 }
 
-.modal-form__input:focus + .modal-form__icon {
+.modal__input:focus + .modal__icon {
   fill: var(--main-blue);
 }
 
-.modal-form__textarea {
+.modal__textarea {
   margin-bottom: 20px;
   padding: 12px 16px;
   resize: none;
@@ -1015,7 +1017,7 @@ button, label {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form__textarea::-webkit-input-placeholder {
+.modal__textarea::-webkit-input-placeholder {
   font-weight: inherit;
   font-size: 14px;
   line-height: inherit;
@@ -1023,7 +1025,7 @@ button, label {
   letter-spacing: 0.01em;
 }
 
-.modal-form__textarea:-ms-input-placeholder {
+.modal__textarea:-ms-input-placeholder {
   font-weight: inherit;
   font-size: 14px;
   line-height: inherit;
@@ -1031,7 +1033,7 @@ button, label {
   letter-spacing: 0.01em;
 }
 
-.modal-form__textarea::-ms-input-placeholder {
+.modal__textarea::-ms-input-placeholder {
   font-weight: inherit;
   font-size: 14px;
   line-height: inherit;
@@ -1039,7 +1041,7 @@ button, label {
   letter-spacing: 0.01em;
 }
 
-.modal-form__textarea::placeholder {
+.modal__textarea::placeholder {
   font-weight: inherit;
   font-size: 14px;
   line-height: inherit;
@@ -1047,13 +1049,13 @@ button, label {
   letter-spacing: 0.01em;
 }
 
-.modal-form__textarea:focus {
+.modal__textarea:focus {
   border: 1px solid var(--main-blue);
   outline: none;
 }
 
 /* Cоглашение с условиями договора */
-.modal-form__agree-label {
+.modal__agree-label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1068,14 +1070,14 @@ button, label {
   letter-spacing: 0.03em;
 }
 
-.modal-form__agree-link {
+.modal__agree-link {
   margin-left: 5px;
   color: var(--main-blue);
   -webkit-text-decoration: underline var(--main-blue);
           text-decoration: underline var(--main-blue);
 }
 
-.modal-form__check-icon {
+.modal__check-icon {
   margin-right: 7px;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -1084,17 +1086,17 @@ button, label {
   border-radius: 2px;
 }
 
-.modal-form__check-icon use {
+.modal__check-icon use {
   opacity: 0;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form__agree-check:checked + .modal-form__check-icon {
+.modal__agree-check:checked + .modal__check-icon {
   border: none;
 }
 
-.modal-form__agree-check:checked + .modal-form__check-icon use {
+.modal__agree-check:checked + .modal__check-icon use {
   opacity: 1;
 }
 
@@ -1109,15 +1111,15 @@ button, label {
           justify-content: center;
 }
 
-.portfolio-filter__item {
+.filter__item {
   margin-right: 8px;
 }
 
-.portfolio-filter__item:last-child {
+.filter__item:last-child {
   margin-right: 0;
 }
 
-.portfolio-filter__btn {
+.filter__btn {
   padding: 6px 22px;
   background-color: var(--light-back);
   border: none;
@@ -1135,7 +1137,7 @@ button, label {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-filter__btn:hover, .portfolio-filter__btn:focus {
+.filter__btn:hover, .filter__btn:focus {
   background-color: var(--main-blue);
   color: var(--white);
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -1143,13 +1145,13 @@ button, label {
 }
 
 /* Список-портфолио */
-.portfolio-list__item {
+.portfolio__item {
   -ms-flex-preferred-size: calc(100% / 3 - 30px);
       flex-basis: calc(100% / 3 - 30px);
   background-color: var(--white);
 }
 
-.portfolio-list__link {
+.portfolio__link {
   display: block;
   -webkit-transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1157,14 +1159,14 @@ button, label {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list__link:hover, .portfolio-list__link:focus {
+.portfolio__link:hover, .portfolio__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   outline: none;
 }
 
-.portfolio-list__link:hover .portfolio-thumb::before,
-.portfolio-list__link:hover .portfolio-thumb__text {
+.portfolio__link:hover .portfolio-thumb::before,
+.portfolio__link:hover .portfolio-thumb__text {
   opacity: 1;
   -webkit-transform: translateY(0);
           transform: translateY(0);
@@ -1215,7 +1217,7 @@ button, label {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-thumb__img {
+.portfolio__img {
   max-width: 100%;
   max-height: 100%;
   -o-object-fit: cover;
