--- a/sass/components/index/_customers.scss
+++ b/sass/components/index/_customers.scss
@@ -1,8 +1,8 @@
-.customers-list__item {
+.customers__item {
   flex-basis: calc(100% / 6 - 30px);
 }
 
-.customers-list__link {
+.customers__link {
   @include flexible();
 
   width: 170px;
@@ -20,6 +20,6 @@
   }
 }
 
-.customers-list__icon { 
+.customers__icon { 
   fill: currentColor;
 }
