--- a/sass/components/index/_features.scss
+++ b/sass/components/index/_features.scss
@@ -1,4 +1,4 @@
-.features-list__icon {
+.features__icon {
   @include flexible();
   
   margin-bottom: 30px;
@@ -15,12 +15,12 @@
   margin-bottom: 10px;
 }
 
-.features-list__item {
+.features__item {
   width: 270px;
   flex-basis: calc(100% / 4 - 30px);
 }
 
-.features-list__text {
+.features__text {
   @include font(400, 14px, 1.71, inherit, inherit);
   
   margin: 0;
