--- a/sass/components/index/_modal.scss
+++ b/sass/components/index/_modal.scss
@@ -49,7 +49,7 @@
   flex-direction: column;
 }
 
-.modal-form__title {
+.modal__title {
   margin: 0;
   margin-bottom: 12px;
   text-align: center;
@@ -69,17 +69,17 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--white);
   
-  &:hover .btn-close__icon,
-  &:focus .btn-close__icon {
+  &:hover .close__icon,
+  &:focus .close__icon {
     fill: var(--main-blue);
   }
 }
 
-.btn-close__icon {
+.close__icon {
   @include main-transition (fill);
 }
 
-.modal-form__label { 
+.modal__label { 
   margin-bottom: 4px;
 
   @include font(400, 12px, 1.17, inherit,  0.01em);
@@ -90,7 +90,7 @@
   margin-bottom: 10px;
 }
 
-.modal-form__icon{
+.modal__icon{
   position: absolute;
   left: 0;
   top: 0;
@@ -101,7 +101,7 @@
   @include main-transition(fill);
 }
 
-.modal-form__input {
+.modal__input {
   padding: 11px;
   padding-left: 40px;
 
@@ -117,12 +117,12 @@
     outline: none;
   }
   
-  &:focus+.modal-form__icon {
+  &:focus+.modal__icon {
     fill: var(--main-blue);
   }
 }
 
-.modal-form__textarea {
+.modal__textarea {
   margin-bottom: 20px;
   padding: 12px 16px;
     
@@ -146,7 +146,7 @@
 }
 
 /* Cоглашение с условиями договора */
-.modal-form__agree-label {
+.modal__agree-label {
   display: flex;
   margin-bottom: 30px;
   justify-content: center;
@@ -154,32 +154,32 @@
   @include font(inherit, 14px, 1.71, inherit, 0.03em);
 }
 
-.modal-form__agree-link {
+.modal__agree-link {
   margin-left: 5px;
   color: var(--main-blue);
   text-decoration: underline var(--main-blue);
 }
 
-.modal-form__check-icon{
+.modal__check-icon {
   margin-right: 7px;
   align-self: center;
   border: 2px solid var(--title-grey);
   border-radius: 2px;
 }
 
-.modal-form__check-icon use {
+.modal__check-icon use {
   opacity: 0;
   
   @include main-transition (opacity);
 
 }
 
-.modal-form__agree-check:checked {
-  & + .modal-form__check-icon{
+.modal__agree-check:checked {
+  & + .modal__check-icon {
     border: none;
   }
 
-  & + .modal-form__check-icon use {
+  & + .modal__check-icon use {
     opacity: 1;
   }
 }
