--- a/sass/components/index/_speciality.scss
+++ b/sass/components/index/_speciality.scss
@@ -2,7 +2,7 @@
   padding-top: 0;
 }
 
-.specialty-list__item {
+.specialty__item {
   flex-basis: calc(100% / 3 - 30px);
 }
 
@@ -12,7 +12,7 @@
   height: 294px;
 }
 
-.specialty-thumb__img {
+.specialty__img {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
