--- a/sass/components/index/_team.scss
+++ b/sass/components/index/_team.scss
@@ -2,7 +2,7 @@
   background-color: var(--light-back);
 }
 
-.team-list__item {
+.team__item {
   flex-basis: calc(100% / 4 - 30px);
 
   background-color: var(--white);
@@ -12,7 +12,7 @@
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list__content {
+.team__content {
   text-align: center;
   padding: 30px 32px;
 }
@@ -23,7 +23,7 @@
   @include font(500, 16px, 1.18, var(--title-grey), inherit);
 }
 
-.team-list__text {
+.team__text {
   margin: 0;
   margin-bottom: 16px;
 
