--- a/css/main.css
+++ b/css/main.css
@@ -562,7 +562,7 @@ button, label {
   background-color: var(--light-back);
 }
 
-.features-list__title {
+.features__subtitle {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -608,7 +608,7 @@ button, label {
      object-fit: cover;
 }
 
-.specialty-list__title {
+.specialty__subtitle {
   position: absolute;
   bottom: 0;
   padding-top: 27px;
@@ -691,7 +691,7 @@ button, label {
   padding: 30px 32px;
 }
 
-.team-list__title {
+.team__subtitle {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -784,9 +784,12 @@ button, label {
   color: var(--white);
 }
 
+.address-item {
+  margin-top: 9px;
+}
+
 .address__link {
   display: inline-block;
-  margin-top: 9px;
   color: var(--text-white6);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1101,7 +1104,7 @@ button, label {
 }
 
 /* Фильтр кнопок */
-.portfolio-filter {
+.filter-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
