--- a/sass/components/index/_speciality.scss
+++ b/sass/components/index/_speciality.scss
@@ -18,7 +18,7 @@
   object-fit: cover;
 }
 
-.specialty-list__title {
+.specialty__subtitle {
   position: absolute;
   bottom: 0;
   padding-top: 27px;
